# variome

./: .env-sample  .gitattributes  .gitignore  .ruff.toml  README.md  environment.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_backend_tests.sh
.github/: dependabot.yml
app/: package-lock.json  package.json
app/public/: index.html
app/src/: Api.js  App.js  index.js
bvl/: apps.py  asgi.py  settings.py  wsgi.py
bvl/admin/: gene.py  genomic_gnomad_frequency.py  genomic_ibvl_frequency.py  severity.py  snv.py  transcript.py  variant.py  variant_annotation.py  variant_consequence.py  variant_transcript.py
bvl/migrations/: 0001_initial.py  0002_genomicgnomadfrequency_af_popmax_variant_filter.py  0003_alter_genomicgnomadfrequency_options_and_more.py
bvl/models/: snv.py  variant.py
bvl/serializers/: gene_serializer.py  genomic_gnomad_serializer.py  genomic_ibvl_serializer.py  severity_serializer.py  snv_serializer.py  transcript_serializer.py  variant_annotation_serializer.py  variant_consequence_serializer.py  variant_serializer.py  variant_transcript_serializer.py
bvl/views/: genomic_population_frequencies.py  search.py  snv_annotations.py  snv_metadata.py
data/fixtures/: genes.tsv  genomic_gnomad_frequencies.tsv  genomic_variome_frequencies.tsv  severities.tsv  snvs.tsv  transcripts.tsv  variants.tsv  variants_annotations.tsv  variants_transcripts.tsv
data/import/: orchestrate.py
data/import_script/: do_import.py  import_utils.py  orchestrate.py
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/content/: About.md  Applying to be a User of He Kākano.md  Conditions of Use of the Variome Dataset.md  Contact.md  ContentConfiguration.js  Home.md
frontend/public/: About He Kākano.md  Conditions of Use of the Variome Dataset.md  ContentConfiguration.js  Governance of the Resource.md  index.html  manifest.json
frontend/public-example/: About.md  Contact.md  ContentConfiguration.js  manifest.json  robots.txt
frontend/src/: Api.js  Api.jsx  App.js  AppLayoutWithNavigation.js  AppLayoutWithNavigation.jsx  AppRouter.js  AppRouter.jsx  Constants.js  ContentParsing.js  ContentParsing.jsx  main.jsx
ibvl/: admin.py  apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
ibvl/admin/: __init__.py  gene.py  genomic_gnomad_frequency.py  genomic_ibvl_frequency.py  genomic_variome_frequency.py  severity.py  snv.py  transcript.py  variant.py  variant_annotation.py  variant_consequence.py  variant_transcript.py  variome_settings.py
ibvl/library_access/: admin.py  decorators.py  models.py
ibvl/management/: tools.py
ibvl/migrations/: 0001_initial.py  0001_squashed_0003_alter_genomicgnomadfrequency_options_and_more.py  0002_genomicgnomadfrequency_af_popmax_variant_filter.py  0003_alter_genomicgnomadfrequency_options_and_more.py  0004_quell_migration_warning.py  0004_rename_genomicibvlfrequency_genomicvariomefrequency_and_more.py  0005_remove_genomicgnomadfrequency_variant_and_more.py  0005_userprofile.py  0006_initial2_create_settings.py  (+2 more)
interface/: urls.py
variome/: asgi.py  settings.py  urls.py  wsgi.py
variome_backend/: apps.py  asgi.py  context_processors.py  middleware.py  settings.py  tests.py  urls.py  views.py  wsgi.py
vcf_import/: VCF_publish.py  VCF_test.py  __init__.py  constants.py  setup_logs.py  tools.py
(+287 files in other folders)
