[project]
name = "variome"
version = "0.1.0"
description = "Portal for the Wasserman lab BVL"
authors = [
    { name = "Brad W" },
    { name = "Brittany H" },
    { name = "Stephanie Q"}
]
dependencies = [
    "django==4.2.27",
    "sqlalchemy>=2.0.30",
    "sqlalchemy-utils>=0.41.2",
    "natsort>=8.4.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.1.0",
    "djangorestframework>=3.15.1",
    "django-extensions>=3.2.3",
    "django-cors-headers>=4.3.1",
    "django-tracking2>=0.5.1",
    "django-auth-adfs>=1.14.0",
    "django-pghistory>=3.2.0",
    "python-dotenv>=1.0.1"
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["variome"]
