[project]
name = "variome"
version = "0.1.0"
description = "Portal for the Wasserman lab BVL"
authors = [
    { name = "Brad W" },
    { name = "Brittany H" },
    { name = "Stephanie Q"}
]
dependencies = [
    "django==5.2.13",
    "natsort>=8.4.0",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.1.0",
    "djangorestframework>=3.15.1",
    "django-extensions>=3.2.3",
    "django-cors-headers>=4.3.1",
    "django-tracking2>=0.5.1",
    "django-auth-adfs==1.16",
    "django-auditlog>=3.4.0",
    "python-dotenv>=1.0.1",
    "pymysql>=1.1.2",
    # temporary pin to address https://github.com/wassermanlab/variome/security/dependabot/82
    # Remove once all dependencies require this minimal version.
    "cryptography>=46.0.7",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["variome"]
